--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "test": "mocha && xo --extend probot"
   },
   "dependencies": {
-    "probot": "~0.2.0"
+    "probot": "~0.4.1"
   },
   "devDependencies": {
+    "eslint-config-probot": ">=0.1.0",
     "expect": "^1.20.2",
+    "localtunnel": "^1.8.2",
     "mocha": "^3.2.0",
-    "xo": "^0.18.0",
-    "eslint-config-probot": ">=0.1.0"
+    "xo": "^0.18.0"
   },
   "engines": {
     "node": ">= 7.7.0",
