--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "mocha && xo --extend probot"
   },
   "dependencies": {
-    "probot": "~0.4.1"
+    "probot": "~0.4.1",
+    "probot-visitor": "^0.1.1"
   },
   "devDependencies": {
     "eslint-config-probot": ">=0.1.0",
