--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "chrono-node": "^1.3.1",
     "js-yaml": "^3.8.3",
-    "probot": "~0.4.1",
+    "probot": "0.5.0",
     "probot-visitor": "^0.1.1"
   },
   "devDependencies": {
