--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "probot-freeze",
+  "name": "probot-snooze",
   "version": "1.0.0",
   "description": "a GitHub integration that temporarily closes issues and pull requests on demand. It will reopen then in the future as specified",
   "author": "Jamie Jones",
   "license": "ISC",
-  "repository": "https://github.com/jbjonesjr/probot-freeze.git",
+  "repository": "https://github.com/jbjonesjr/probot-snooze.git",
   "scripts": {
     "start": "probot run ./index.js",
     "test": "mocha && xo --extend probot"
@@ -12,8 +12,8 @@
   "dependencies": {
     "chrono-node": "^1.3.1",
     "js-yaml": "^3.8.3",
-    "probot": "0.5.0",
-    "probot-visitor": "^0.1.1"
+    "probot": "0.7.4",
+    "probot-visitor": "0.2.0"
   },
   "devDependencies": {
     "eslint-config-probot": ">=0.1.0",
