--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chrono-node": "^1.3.1",
     "js-yaml": "^3.8.3",
+    "moment": "^2.18.1",
     "probot": "0.7.4",
     "probot-visitor": "0.2.0"
   },
