--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "mocha && xo --extend probot"
   },
   "dependencies": {
-    "chrono-node": "^1.3.1",
+    "chrono-node": "^1.3.4",
+    "bravey": "^0.1.2",
     "js-yaml": "^3.8.3",
     "moment": "^2.18.1",
     "probot": "0.7.5",
