--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chrono-node": "^1.3.4",
     "moment": "^2.18.1",
     "probot": "^0.10.0",
+    "probot-metadata": "github:probot/metadata",
     "probot-scheduler": "1.0.2"
   },
   "devDependencies": {
