--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bravey": "^0.1.2",
     "moment": "^2.18.1",
     "probot": "0.9.1",
+    "probot-metadata": "github:probot/metadata",
     "probot-scheduler": "1.0.2"
   },
   "devDependencies": {
