--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.18.1",
     "parse-reminder": "^1.0.0",
     "probot": "^0.11.0",
+    "probot-commands": "^1.0.0",
     "probot-scheduler": "1.0.2"
   },
   "devDependencies": {
