--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "chrono-node": "^1.3.4",
     "moment": "^2.18.1",
     "parse-reminder": "^1.2.0",
-    "probot": "^3.0.1",
+    "probot": "^3.0.3",
     "probot-commands": "^1.0.0",
     "probot-metadata": "^1.0.0",
-    "probot-scheduler": "1.0.2"
+    "probot-scheduler": "^1.0.3"
   },
   "devDependencies": {
     "eslint-config-probot": ">=0.1.0",
