--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "https://github.com/probot/probot-reminders.git",
   "scripts": {
     "start": "probot run ./index.js",
-    "test": "mocha && xo --extend probot"
+    "test": "mocha && standard"
   },
   "dependencies": {
     "chrono-node": "^1.3.4",
@@ -19,14 +19,18 @@
     "probot-scheduler": "^1.0.3"
   },
   "devDependencies": {
-    "eslint-config-probot": ">=0.1.0",
     "expect": "^1.20.2",
     "localtunnel": "^1.8.2",
     "mocha": "^3.2.0",
-    "xo": "^0.18.0"
+    "standard": "^10.0.3"
   },
   "engines": {
     "node": "= 7.8.0",
     "npm": ">= 4.0.0"
+  },
+  "standard": {
+    "env": [
+      "jest"
+    ]
   }
 }
