--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "https://github.com/probot/probot-reminders.git",
   "scripts": {
     "start": "probot run ./index.js",
-    "test": "mocha && standard"
+    "test": "jest && standard"
   },
   "dependencies": {
     "chrono-node": "^1.3.4",
@@ -19,9 +19,9 @@
     "probot-scheduler": "^1.0.3"
   },
   "devDependencies": {
-    "expect": "^1.20.2",
+    "eslint-plugin-import": "^2.8.0",
+    "jest": "^22.0.6",
     "localtunnel": "^1.8.2",
-    "mocha": "^3.2.0",
     "standard": "^10.0.3"
   },
   "engines": {
