--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "standard": "^10.0.3"
   },
   "engines": {
-    "node": "= 7.8.0",
-    "npm": ">= 4.0.0"
+    "node": "^8.3.0",
+    "npm": "^5.0.0"
   },
   "standard": {
     "env": [
