--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "repository": "https://github.com/probot/probot-reminders.git",
   "scripts": {
     "start": "probot run ./index.js",
-    "test": "jest && standard"
+    "test": "jest && standard",
+    "test:debug": "node --inspect node_modules/.bin/jest"
   },
   "jest": {
     "verbose": true,
@@ -17,10 +18,10 @@
     "chrono-node": "^1.3.4",
     "moment": "^2.18.1",
     "parse-reminder": "^1.2.0",
-    "probot": "^7.1.1",
-    "probot-commands": "^1.1.0",
-    "probot-metadata": "^1.0.0",
-    "probot-scheduler": "^1.1.0"
+    "probot": "^10.9.0",
+    "probot-commands": "^1.0.1",
+    "probot-metadata": "^1.0.1",
+    "probot-scheduler": "2.0.0-beta.1"
   },
   "devDependencies": {
     "eslint-plugin-import": "^2.8.0",
