--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "@zeit/ncc": "^0.22.3",
     "chrono-node": "^1.3.4",
     "moment": "^2.18.1",
     "parse-reminder": "^1.2.0",
