--- a/.github/workflows/npm-test.js.yml
+++ b/.github/workflows/npm-test.js.yml
@@ -18,4 +18,6 @@ jobs:
       with:
         node-version: 12.x
     - run: npm install
+    - name: 'Standard Lint'
+      run: npm lint
     - run: npm test
