--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "@probot/adapter-github-actions": "^3.0.1",
     "@zeit/ncc": "^0.22.3",
     "chrono-node": "^1.3.4",
     "moment": "^2.18.1",
