--- a/.github/workflows/action-build.yml
+++ b/.github/workflows/action-build.yml
@@ -14,3 +14,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           src: 'index.js'
+          branch: ${{ github.ref }}
