--- a/.github/workflows/action-build.yml
+++ b/.github/workflows/action-build.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           src: 'index.js'
-          branch: ${{ steps.myref.outputs.branch }}
+          branch: ${{ steps.myref.outputs.branch }} #<--- problem with how they fetch head....
