--- a/.github/workflows/action-build.yml
+++ b/.github/workflows/action-build.yml
@@ -12,8 +12,38 @@ jobs:
         id: myref
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - uses: tool3/ncc@master
+      - run: npm run-script build-action
+      - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          src: 'index.js'
-          branch: ${{ steps.myref.outputs.branch }} #<--- problem with how they fetch head....
+          # The arguments for the `git add` command (see the paragraph below for more info)
+          # Default: '.'
+          add: 'dist'
+
+          # The local path to the directory where your repository is located. You should use actions/checkout first to set it up
+          # Default: '.'
+          #cwd: './path/to/the/repo'
+
+          # The message for the commit
+          # Default: 'Commit from GitHub Actions (name of the workflow)'
+          message: 'dist release 📦 - created via Actions'
+
+          # The flag used on the pull strategy
+          # Default: '--no-rebase'
+          # pull_strategy: '--no-rebase or --no-ff or --rebase'
+
+          # Whether to push the commit and, if any, its tags to the repo. It can also be used to set the git push arguments (see the paragraph below for more info)
+          # Default: true
+          #push: false
+
+          # Whether to use the --signoff option on `git commit` (only `true` and `false` are accepted)
+          # Default: false
+          # signoff: true
+
+          # Arguments for the git tag command (the tag name always needs to be the first word not preceded by an hyphen)
+          # Default: ''
+          # tag: 'v1.0.0 --force'
+            #- uses: tool3/ncc@master <---- dones't work with non-main branch
+            #  with:
+            #    github_token: ${{ secrets.GITHUB_TOKEN }}
+            #    src: 'index.js'
+            #    branch: ${{ steps.myref.outputs.branch }} #<--- problem with how they fetch head....
