--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "probot-scheduler": "2.0.0-beta.1"
   },
   "devDependencies": {
+    "@zeit/ncc": "^0.22.3",
     "eslint-plugin-import": "^2.8.0",
     "jest": "^23.6.0",
     "nock": "^13.0.4",
