--- a/.github/workflows/action-build.yml
+++ b/.github/workflows/action-build.yml
@@ -12,6 +12,7 @@ jobs:
         id: myref
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
+      - run: npm install
       - run: npm run-script build-action
       - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version
         with:
