--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "@octokit/action": "^3.5.0",
     "@probot/adapter-github-actions": "^3.0.1",
     "chrono-node": "^1.3.4",
     "moment": "^2.18.1",
