build(package): simplify repository fields
created using @octoherd and https://github.com/gr2m/octoherd-script-normalize-package-repository-field

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "reminders for GitHub Issues and Pull Requests",
   "author": "Jamie Jones",
   "license": "ISC",
-  "repository": "https://github.com/probot/probot-reminders.git",
+  "repository": "github:probot/reminders",
   "scripts": {
     "start": "probot run ./index.js",
     "test": "jest && standard",
