--- a/.github/workflows/npm-test.js.yml
+++ b/.github/workflows/npm-test.js.yml
@@ -1,15 +1,23 @@
 name: Node.js CI
-"on":
+on:
   - push
   - pull_request
+
+permissions:
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
+
+      - name: setup node
         uses: actions/setup-node@v4
         with:
-          node-version: 16
-      - run: npm install
+          node-version-file: .node-version
+          cache: npm
+
+      - run: npm ci
+
       - run: npm test
