--- a/.github/workflows/npm-test.js.yml
+++ b/.github/workflows/npm-test.js.yml
@@ -6,10 +6,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version-file: .node-version
+          cache: npm
       - run: npm install
       - run: npm test
