--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "probot-scheduler": "2.0.0-beta.1"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.22.3",
+    "@vercel/ncc": "^0.38.1",
     "eslint-plugin-import": "^2.8.0",
     "jest": "^29.0.0",
     "nock": "^13.0.4",
